[package]
name = "api"
description = "An API service for the emote tracking service"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
