[package]
name = "api"
description = "An API service for the emote tracking service"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.193", features = ["derive"] }
common = { path = "../common" }
dotenvy = "0.15.7"
twitch_api = { version = "0.7.0-rc.7", features = ["helix", "reqwest", "twitch_oauth2"] }
reqwest = "0.11.23"
