[package]
name = "twitch_bot"
description = "A Twitch bot that scans chats for emote usage and stores them in a database"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
