[package]
name = "twitch_bot"
description = "A Twitch bot that scans chats for emote usage and stores them in a database"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.35.0", features = ["full"] }
twitch-irc = "5.0.1"
common = { path = "../common" }
