[package]
name = "twitch_bot"
description = "A Twitch bot that scans chats for emote usage and stores them in a database"
version.workspace = true
authors.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.35.0", features = ["full"] }
twitch-irc = "5.0.1"
common = { path = "../common" }
reqwest = { version = "0.11.23", features = ["json"] }
eyre = "0.6.11"
tungstenite = "0.21.0"
tokio-tungstenite = "0.21.0"
serde_json = "1.0.108"
twitch_api = { version = "0.7.0-rc.7", features = ["twitch_oauth2", "reqwest", "eventsub"] }
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
